# kor

./: CMakeLists.txt  application.cpp  application.h  config.h.cmake  main.cpp  main.h
minicli/: minicli.cpp  miniclidialog.cpp  miniclihandler.cpp
